# ISTool

./: .gitignore  CMakeLists.txt  main.cpp  phone-1.sl  run.cpp
basic/: CMakeLists.txt  bitset.cpp  config.cpp  data.cpp  data.h  env.cpp  example_space.cpp  grammar.cpp  grammar_builder.cpp  program.cpp  semantics.cpp  semantics.h  specification.cpp  specification.h  time_guard.cpp  type.cpp  type_system.cpp  type_system.h  value.cpp  verifier.cpp  verifier.h
basic/basic/: data.cpp  data.h  grammar.cpp  program.h  specification.cpp  time_guard.h  type.cpp  type.h  type_system.cpp  value.cpp  value.h  verifier.cpp
basic/ext/: CMakeLists.txt
basic/ext/z3/: z3_semantics.h  z3_util.cpp  z3_util.h  z3_verifier.cpp  z3_verifier.h
basic/ext/z3/semantics/: clia.cpp  clia.h
basic/parser/: CMakeLists.txt  json_util.cpp  json_util.h
basic/parser/sygus/: parser.cpp  parser.h
basic/theory/: clia_semantics.cpp  clia_semantics.h  theory.h
debug_tool/: vsa.cpp
dp-benchmark/: 01knapsack.f  01knapsack_result.f  test.f
dsl/: CMakeLists.txt
dsl/autolifter/: autolifter_dad_dataset.cpp  autolifter_dataset.cpp  autolifter_dsl.cpp  autolifter_lazy_tag_dataset.cpp
dsl/clia/: clia_dsl.cpp
dsl/component/: component_dataset.cpp  component_dsl.cpp  component_extra_semantics.cpp
dsl/deepcoder/: deepcoder_dsl.cpp
dsl/samplesy/: samplesy_dsl.cpp  samplesy_semantics.cpp  samplesy_witness.cpp
executor/: CMakeLists.txt  run_autolifter.cpp  run_cbs_icse10.cpp  run_incre.cpp  run_incre_dp.cpp  run_incre_dp_2.cpp  run_incre_dp_3.cpp  run_incre_dp_3_2.cpp  run_incre_dp_4.cpp  run_incre_dp_test.cpp  run_incre_grisette.cpp  run_incre_label.cpp  run_question_selection.cpp  run_splitor.cpp  run_status.cpp  run_sygus.cpp  test.cpp
executor/invoker/: autolifter_invoker.cpp  cbs_invoker.cpp  eusolver_invoker.cpp  invoker.cpp  maxflash_invoker.cpp  multithread.cpp  obe_invoker.cpp  polygen_invoker.cpp  vsa_invoker.cpp
ext/: CMakeLists.txt
ext/composed_semantics/: composed_rule.cpp  composed_semantics.cpp
ext/deepcoder/: anonymous_function.cpp  data_type.cpp  data_util.cpp  data_value.cpp  deepcoder_semantics.cpp  deepcoder_type_system.cpp  higher_order_operator.cpp  tmp_info.cpp
ext/limited_type/: limited_type.cpp
ext/vsa/: top_down_model.cpp  vsa.cpp  vsa_extension.cpp  witness.cpp
ext/z3/: z3_example_space.cpp  z3_extension.cpp  z3_semantics.cpp  z3_type.h  z3_verifier.cpp
include/debug_tool/: vsa.h
incre/: CMakeLists.txt  incre_solver.cpp
incre-benchmarks/benchmark/: dac_mps_deepcoder.f
incre-tests/: post_output.txt  pre_output.txt  syc.f  test.f  trans.f
incre-tests/autolifter/: autolifter-base.f
incre-tests/dp/: 01knapsack.f  15-11.f  15-3.f
incre-tests/lsp/: page22-2.f
incre/analysis/: incre_align_type.cpp  incre_collector.cpp  incre_component_collector.cpp  incre_default_generator.cpp  incre_eliminate_unbounded_create.cpp  incre_env_collector.cpp  incre_generator.cpp  incre_instru_info.cpp  incre_instru_runtime.cpp  incre_instru_type.cpp  incre_instru_types.cpp  incre_intru_info.cpp  incre_label_compress.cpp  incre_pass_type.cpp
incre/autolabel/: CMakeLists.txt  incre_autolabel_basic.cpp  incre_autolabel_objective.cpp  incre_autolabel_typing.cpp  incre_autolabel_util.cpp  incre_func_type.cpp  incre_label_construct_term.cpp  incre_label_construct_type.cpp  incre_label_context.cpp  incre_label_program.cpp  incre_label_solver.cpp  incre_label_term.cpp  incre_label_type.cpp
incre/autolabel/greedy/: incre_autolabel_assign_label.cpp  incre_autolabel_prepare_let_type.cpp  incre_autolabel_prepare_type.cpp
incre/autolabel/solver/: incre_autolabel_constraint_align_collector.cpp  incre_autolabel_constraint_construct.cpp  incre_autolabel_constraint_context.cpp  incre_autolabel_constraint_solver.cpp
incre/autolifter/: incre_autolifter_comb_solver.cpp  incre_autolifter_solver.cpp  incre_aux_semantics.cpp  incre_grammar_builder.cpp  incre_plp.cpp  incre_plp_solver.cpp  incre_solver_util.cpp
incre/autolifter/enumeration/: incre_enumeration_solver.cpp
incre/autolifter/nonscalar/: incre_nonscalar_autolifter.cpp  incre_nonscalar_comb.cpp
incre/grammar/: extra_grammar_loader.cpp  incre_component.cpp  incre_component_collector.cpp  incre_default_component_collector.cpp  incre_grammar_builder.cpp  incre_label_component_collector.cpp  incre_source_component_collector.cpp
incre/io/: incre_from_json.cpp  incre_grisette.cpp  incre_parser.cpp  incre_printer.cpp  incre_term_printer.cpp  incre_to_haskell.cpp
incre/language/: incre_aux_semantics.cpp  incre_basic_operators.cpp  incre_clear_compress.cpp  incre_compress_related.cpp  incre_config.cpp  incre_context.cpp  incre_dp.cpp  incre_eliminate_nested_align.cpp  incre_env_runner.cpp  incre_lookup.cpp  incre_pattern.cpp  incre_program.cpp  incre_remove_global.cpp  incre_remove_unused_let.cpp  incre_rewriter.cpp  incre_semantics.cpp  incre_syntax.cpp  incre_term.cpp  incre_type.cpp  incre_type_system.cpp  incre_types.cpp  incre_unbounded_vars.cpp  incre_util.cpp  incre_value.cpp
incre/parser/: incre_basic_operators.cpp  incre_from_json.cpp
incre/trans/: incre_grammar_builder.cpp  incre_trans.cpp  incre_type_translator.cpp
libs/basic/: env.h  (+7 more)
selector/: CMakeLists.txt  finite_random_selector.cpp  random_selector.cpp  selector.cpp
solver/: CMakeLists.txt  iterative_solver.cpp  solver.cpp  solver.h
sygus/: CMakeLists.txt  sygus.cpp
sygus/theory/: CMakeLists.txt  clia_semantics.cpp  clia_semantics.h  theory.cpp  theory.h
sygus/theory/basic/: theory_semantics.cpp
sygus/theory/basic/bv/: bv.cpp  bv_semantics.cpp
sygus/theory/basic/clia/: clia.cpp  clia_semantics.cpp  clia_type.cpp  clia_value.cpp  semantics.cpp  type.cpp  type.h
sygus/theory/basic/string/: str.cpp  string_semantics.cpp  string_type.cpp  string_value.cpp
sygus/theory/witness/clia/: clia_witness.cpp
sygus/theory/witness/string/: string_witness.cpp
sygus/theory/z3/: theory_z3_semantics.cpp
sygus/theory/z3/bv/: bv_z3.cpp  bv_z3_semantics.cpp  bv_z3_type.cpp
sygus/theory/z3/clia/: clia_z3_semantics.cpp  clia_z3_type.cpp
tests/: max2.sl
(+352 files in other folders)
